继续定制化

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,8 +26,7 @@
         {% endif %}
       {% endfor %}
       <hr>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub project</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
