--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,10 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <style>
+	body, p, h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
+		font-family: system-font, -webkit-system-font, -apple-system-font, "Source Sans Pro", "Source Han Sans SC", "Source Han Sans CN", "微软雅黑", Arial, sans-serif!important;
+	}
+	code{ font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace!important; }
+  </style>
 </head>
