--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,9 +26,9 @@
         {% endif %}
       {% endfor %}
       <hr>
-      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub页面</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>&copy; {{ site.time | date: '%Y' }} SuperFashi. 版权所有</p>
   </div>
 </div>
