--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,9 +20,9 @@
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
-          {% if node.layout == "page" %}
+          {% if node.layout == "page" %}{% if node.noindex %}{% else %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
-          {% endif %}
+          {% endif %}{% endif %}
         {% endif %}
       {% endfor %}
       <hr>
