ZE3kr.tlo.xyz 是强制 https 的，所以改为 https://

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
       <hr>
       <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub页面</a>
       <a class="sidebar-nav-item" href="http://www.cnbeining.com">cnBeining</a>
-      <a class="sidebar-nav-item" href="http://ze3kr.tlo.xyz">ZE3kr</a>
+      <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz">ZE3kr</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }} SuperFashi. 版权所有</p>
