--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
 
-  <title>{% if page.title %}{{ page.title }} | 哔哩哔哩乾nm的杯!{% else %}哔哩哔哩乾nm的杯!{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }} | 哔哩哔哩乾nm的杯!{% else %}哔哩哔哩乾nm的杯! - FuckBilibili{% endif %}</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/main.css">
