--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,11 +26,11 @@
         {% endif %}
       {% endfor %}
       <hr>
-      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub页面</a>
       <a class="sidebar-nav-item" href="http://www.cnbeining.com">cnBeining</a>
       <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz">ZE3kr</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub页面</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }} SuperFashi. 版权所有</p>
+    <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com">SuperFashi</a>. 版权所有</p>
   </div>
 </div>
