--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,8 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <script src="//cdnjs-com.b0.upaiyun.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
+  {% if page.includejs %}<script src="{{ page.includejs }}" type="text/javascript"></script>{% endif %}
   <style>
 	body, p, h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
 		font-family: system-font, -webkit-system-font, -apple-system-font, "Source Sans Pro", "Source Han Sans SC", "Source Han Sans CN", "微软雅黑", Arial, sans-serif!important;
