--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
-        <a href="/">
-          {{ site.title }}
-        </a>
-      </h1>
+    <img src="/img/horizontallogo.png" href="/">{{ site.title }}</img>
       <p class="lead">{{ site.description }}</p>
     </div>
 
