--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-    <img src="/img/horizontallogo.png" href="/">{{ site.title }}</img>
+    <a href="/"><img src="/img/horizontallogo.png" alt="FuckBilibili" /></a>
       <p class="lead">{{ site.description }}</p>
     </div>
 
