--- a/public/css/main.css
+++ b/public/css/main.css
@@ -696,7 +696,8 @@ tbody tr:nth-child(odd) th {
 }
 
 .sidebar img {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* About section */
 .sidebar-about h1 {
