--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/main.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/svg.css">
   <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=EB+Garamond"> -->
   <!-- Icons -->
