--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
   <title>{% if page.title %}{{ page.title }} | 哔哩哔哩乾nm的杯!{% else %}哔哩哔哩乾nm的杯! - FuckBilibili{% endif %}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/main.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/svg.css">
+  <link rel="stylesheet" href="//cdn-tlo.b0.upaiyun.com/css/fuckbilibilisvg.css">
   <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=EB+Garamond"> -->
   <!-- Icons -->
