--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,5 +28,6 @@
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com">SuperFashi</a>. 版权所有</p>
+     <p>大型文件如css托管在UPYUN上</p>
   </div>
 </div>
