改进移动版本

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,11 @@ layout: compress
   {% include head.html %}
 
   <body>
-
-    {% include sidebar.html %}
-
+	<a href="/" class="no-destop"><div class="svg-fuckbilibili-logo" style="width: 60vw;height: 6em;background-repeat: no-repeat;margin-left: auto;margin-top: 2em;margin-right: auto;"></div></a>
     <div class="content container">
       {{ content }}
     </div>
+	{% include sidebar.html %}
 
   </body>
 </html>
