--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
   {% include head.html %}
 
   <body>
-	<a href="/" class="no-destop"><div class="svg-fuckbilibili-logo" style="width: 60vw;height: 6em;background-repeat: no-repeat;margin-left: auto;margin-top: 2em;margin-right: auto;"></div></a>
+	<a href="/" class="no-destop"><div class="svg-fuckbilibili-logo" style="width: 80vw;max-width: 400px;height: 6em;background-repeat: no-repeat;margin-left: auto;margin-top: 2em;margin-right: auto;"></div></a>
     <div class="content container">
       {{ content }}
     </div>
