--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-    <a href="/"><div class="svg-fuckbilibili-logo" style="width:272px;height:5em;background-repeat:no-repeat;max-width:100%;margin-left:auto;margin-right:auto;"></div></a>
+    <!--><a href="/"><div class="svg-fuckbilibili-logo" style="width:272px;height:5em;background-repeat:no-repeat;max-width:100%;margin-left:auto;margin-right:auto;"></div></a><-->
       <p class="lead">{{ site.description }}</p>
     </div>
 
