一些链接加入 target="_blank"，默认在新标签页打开

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,12 +18,12 @@
         <a class="sidebar-nav-item{% if page.url == post.url %} active{% endif %}" href="{{ post.url }}">{{ post.title }}</a>
       {% endfor %}
       <hr>
-      <a class="sidebar-nav-item" href="http://www.cnbeining.com">cnBeining</a>
-      <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz">ZE3kr</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub页面</a>
+      <a class="sidebar-nav-item" href="http://www.cnbeining.com" target="_blank">cnBeining</a>
+      <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz" target="_blank">ZE3kr</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}" target="_blank">GitHub页面</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com">SuperFashi</a>. 版权所有</p>
+    <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com" target="_blank">SuperFashi</a>. 版权所有</p>
      <p>大型文件如css托管在UPYUN上</p>
   </div>
 </div>
