结构化网页，使用 HTML 5 新方式定义页面，对搜索引擎更友好（再一次忽视 IE8）

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<nav class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
     <a href="/"><div class="svg-fuckbilibili-logo" style="width:272px;height:5em;background-repeat:no-repeat;max-width:100%;margin-left:auto;margin-right:auto;"></div></a>
@@ -26,4 +26,4 @@
     <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com" target="_blank">SuperFashi</a>. 版权所有</p>
      <p>大型文件如css托管在UPYUN上</p>
   </div>
-</div>
+</nav>
