--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@ layout: compress
   {% include head.html %}
 
   <body>
-    <div class="content container">
+    <article class="content container">
       {{ content }}
-    </div>
+    </article>
 	{% include sidebar.html %}
 
   </body>
