--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/main.css">
-  <link rel="stylesheet" href="//cdn-tlo.b0.upaiyun.com/css/fuckbilibilisvg.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}public/usercss/logosvg.css">
   <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=EB+Garamond"> -->
   <!-- Icons -->
@@ -22,7 +22,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
-  <script src="//cdnjs-com.b0.upaiyun.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}public/js/jquery.min.js" type="text/javascript"></script>
   {% if page.includejs %}<script src="{{ page.includejs }}" type="text/javascript"></script>{% endif %}
   <style>
 	body, p, h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
