--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,8 +21,7 @@
       <a class="sidebar-nav-item" href="http://www.cnbeining.com" target="_blank">cnBeining</a>
       <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz" target="_blank">ZE3kr</a>
       <a class="sidebar-nav-item" href="http://www.kylen314.com/" target="_blank">Vespa314</a>
-	  <a class="sidebar-nav-item" href="https://github.com/fuckbilibili/fuckbilibili.github.io/edit/master/{{ page.path }}" target="_blank">帮助我们改善此页面</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}" target="_blank">本页面的GitHub</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repository_url }}" target="_blank">本项目的 GitHub</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }} <a href="http://www.superfashi.com" target="_blank">SuperFashi</a>. 版权所有</p>
