--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ layout: compress
     <article class="content container">
       {{ content }}
     </article>
+	<footer><a class="sidebar-nav-item" href="https://github.com/fuckbilibili/fuckbilibili.github.io/edit/master/{{ page.path }}" target="_blank">帮助我们改善此页面</a> | <h3 id="comments" class="t60"><a href="https://github.com/fuckbilibili/fuckbilibili.github.io/issues/new?title=%E8%AF%84%E8%AE%BA%3A+%E7%94%A8+{{ page.title | cgi_escape }}" target="_blank">评论此页面</a></h3></footer>
 	{% include sidebar.html %}
 
   </body>
