--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
 
-  <title>{% if page.title %}{{ page.title }} | 哔哩哔哩乾nm的杯!{% else %}哔哩哔哩乾nm的杯! - FuckBilibili{% endif %}</title>
+  <title>{% if page.full_title %}{{ page.full_title }}{% else %}{% if page.title %}{{ page.title }} | 哔哩哔哩乾nm的杯!{% else %}哔哩哔哩乾nm的杯! - FuckBilibili{% endif %}{% endif %}</title>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   {% if page.tags %}<meta name="keywords"content="{{ page.tags | join: ', ' }}{% if page.categories %}, {% for category in page.categories %}{% include translate.html name=category %}, {% endfor %}{% endif %}{{ site.title }}"/>{% elsif page.categories %}<meta name="keywords"content="{% for category in page.categories %}{% include translate.html name=category %}, {% endfor %}{{ site.title }}"/>{% else %}<meta name="keywords"content="{{ site.miantags | join: ', ' }}, {{ site.title }}"/>{% endif %}
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
