ze3kr.tlo.xyz 换回了 ze3kr.com

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
       {% endfor %}
       <hr>
       <a class="sidebar-nav-item" href="https://www.cnbeining.com" target="_blank">cnBeining</a>
-      <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz" target="_blank">ZE3kr</a>
+      <a class="sidebar-nav-item" href="https://ze3kr.com" target="_blank">ZE3kr</a>
       <a class="sidebar-nav-item" href="http://www.kylen314.com/" target="_blank">Vespa314</a>
       <a class="sidebar-nav-item" href="{{ site.github.repository_url }}" target="_blank">本项目的 GitHub</a>
     </nav>
