--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,6 +19,7 @@
       {% endfor %}
       <hr>
       <a class="sidebar-nav-item" href="https://www.cnbeining.com" target="_blank">cnBeining</a>
+      <a class="sidebar-nav-item" href="http://blog.eqoe.cn" target="_blank">typcn</a>
       <a class="sidebar-nav-item" href="https://ze3kr.tlo.xyz" target="_blank">ZE3kr</a>
       <a class="sidebar-nav-item" href="http://www.kylen314.com/" target="_blank">Vespa314</a>
       <a class="sidebar-nav-item" href="https://github.com/fuckbilibili/fuckbilibili.github.io" target="_blank">本项目的 GitHub</a>
